--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>MithrilBeats</title>
+    <title>bmsjs -ithildin-</title>
     <meta name="description" content="">
     <meta name="keywords" content=""/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
